--- a/phaser/index.html
+++ b/phaser/index.html
@@ -27,25 +27,25 @@
     <script type='text/javascript' src='lib/astar.js'></script>
     <script type='text/javascript'>
 
-        var graphDiagonal = new Graph([
-            [1,1,1,1],
-            [0,1,1,0],
-            [0,0,1,1]
-        ], { diagonal: false });
-
-        var start = graphDiagonal.grid[0][0];
-        var end = graphDiagonal.grid[2][2];
-        var resultWithDiagonals = astar.search(graphDiagonal, start, end, { heuristic: astar.heuristics.diagonal });
-        console.log(resultWithDiagonals);
-        // Weight can easily be added by increasing the values within the graph, and where 0 is infinite (a wall)
-        var graphWithWeight = new Graph([
-            [1,1,2,30],
-            [0,4,1.3,0],
-            [0,0,5,1]
-        ]);
-        var startWithWeight = graphWithWeight.grid[0][0];
-        var endWithWeight = graphWithWeight.grid[1][2];
-        var resultWithWeight = astar.search(graphWithWeight, startWithWeight, endWithWeight);
+//        var graphDiagonal = new Graph([
+//            [1,1,1,1],
+//            [0,1,1,0],
+//            [0,0,1,1]
+//        ], { diagonal: false });
+//
+//        var start = graphDiagonal.grid[0][0];
+//        var end = graphDiagonal.grid[2][2];
+//        var resultWithDiagonals = astar.search(graphDiagonal, start, end, { heuristic: astar.heuristics.diagonal });
+//        console.log(resultWithDiagonals);
+//        // Weight can easily be added by increasing the values within the graph, and where 0 is infinite (a wall)
+//        var graphWithWeight = new Graph([
+//            [1,1,2,30],
+//            [0,4,1.3,0],
+//            [0,0,5,1]
+//        ]);
+//        var startWithWeight = graphWithWeight.grid[0][0];
+//        var endWithWeight = graphWithWeight.grid[1][2];
+//        var resultWithWeight = astar.search(graphWithWeight, startWithWeight, endWithWeight);
 
         // resultWithWeight is an array containing the shortest path taking into account the weight of a node
 //
