Fix errors, add missing files and make the project runnable

--- a/phaser/index.html
+++ b/phaser/index.html
@@ -24,6 +24,10 @@
 
     <script src="lib/phaser.min.js"></script>
     <script src="dist/bundle.js"></script>
+    <script src="lib/lodash.js"></script>
+    <script src="lib/synaptic.js"></script>
+    <script src="lib/neural_network.js"></script>
+    <script src="lib/decision-tree.js"></script>
     <script type='text/javascript' src='lib/astar.js'></script>
     <script type='text/javascript'>
 
