--- a/phaser/index.html
+++ b/phaser/index.html
@@ -28,12 +28,14 @@
 </head>
 
 <body>
+size:
     <select id="size">
         <option value="tiny">tiny</option>
         <option value="small">small</option>
         <option value="big">big</option>
         <option value="huge">huge</option>
     </select>
+color:
     <select id="color">
         <option value="black">black</option>
         <option value="red">red</option>
@@ -41,14 +43,17 @@
         <option value="blue">blue</option>
         <option value="green">green</option>
     </select>
+refrigerated:
     <select id="refrigerated">
         <option value="yes">yes</option>
         <option value="no">no</option>
     </select>
+hazardous:
     <select id="hazardous">
         <option value="yes">yes</option>
         <option value="no">no</option>
     </select>
+food:
     <select id="food">
         <option value="yes">yes</option>
         <option value="no">no</option>
