--- a/phaser/index.html
+++ b/phaser/index.html
@@ -66,8 +66,11 @@ food:
 
     <script src="lib/phaser.min.js"></script>
     <script src="dist/bundle.js"></script>
-    <script src="lib/lodash.js"></script>
-    <script src="lib/synaptic.js"></script>
+<script src="lib/lodash.js"></script>
+<script src="lib/synaptic.js"></script>
+<script src="lib/neural_network.js"></script>
+<script src="lib/decision-tree.js"></script>
+<script type='text/javascript' src='lib/astar.js'></script>
     <script type='text/javascript' src='lib/neural_network.js'></script>
 
 
